--- a/carbon_calculator/src/main/resources/templates/index.html
+++ b/carbon_calculator/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>QuickCarbon | Dashboard</title>
+    <title>PersonalCarbonCalculator | Dashboard</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -17,7 +17,6 @@
             </ul>
         </nav>
     </aside>
-
 
     <main class="main-content">
         <header class="top-bar">
@@ -59,6 +58,7 @@
                 <h3>Yeni Aktivite Ekle</h3>
                 <div class="form-row">
                     <select id="activityName">
+                        <option value="Seçiniz" disabled selected>Aktivite Seçiniz</option>
                         <option value="Video İzleme">Video İzleme</option>
                         <option value="E-posta">E-posta</option>
                         <option value="Online Toplantı">Online Toplantı</option>
